Fix scrollbar styles to hide border radius inconsistency

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -6959,8 +6959,38 @@ a.status-card {
   }
 }
 
-::-webkit-scrollbar-thumb {
+::-webkit-scrollbar {
+  width: 16px;
+  height: 16px;
+}
+
+::-webkit-scrollbar-track {
+  background: inherit;
   border-radius: 0;
+
+  &:active,
+  &:hover {
+    background: inherit;
+  }
+}
+
+::-webkit-scrollbar-thumb {
+  &,
+  &:active,
+  &:hover {
+    border-radius: 0;
+    background-clip: content-box;
+
+    // stylelint-disable-next-line selector-pseudo-class-no-unknown
+    &:horizontal {
+      border-top: 4px solid transparent;
+    }
+
+    // stylelint-disable-next-line selector-pseudo-class-no-unknown
+    &:vertical {
+      border-left: 4px solid transparent;
+    }
+  }
 }
 
 noscript {
